[package]
name = "json_parser"
version = "0.1.0"
edition = "2024"
description = "A Rust project that implements a JSON parser using the Pest parsing library. It reads JSON text input and converts it into a structured internal representation."
readme = "README.md"
license = "MIT"
authors = ["Valentyn Radchenko valentyn.radchenko@outlook.com"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
pest = "2.6"
pest_derive = "2.6"
thiserror = "2.0.17"
